# research-toolkit

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-NOTICE.md  README.md  cli.py  pyproject.toml  setup.py
config/: company-profile.md  feedback_schema.json
config/dimensions/: automatable.json  sub_questions.json
config/rubrics/: antrag.json  (+2 more)
data/: seed_topics.json
docs/: architecture.md  roadmap-archive.md  roadmap.md
research_recursive_self_improvement/: findings_empirical.md  findings_epistemology.md  findings_knowledge_work.md  findings_reflexive_systems.md  findings_theory.md  research_plan.md
scripts/: build_bundestag_vocab.py
skills/: pipeline.md  review.md  search.md
spec/: .current-spec
tests/: live_test_connectors.py  test_base_client.py  test_bias_test.py  test_bibtex_parser.py  test_bundestag_client.py  test_bundestag_live.py  test_bundestag_vocabulary.py  test_citation_tracker.py  test_claim_verifier.py  test_cli.py  test_dblp_client.py  test_document_splitter.py  test_drafting.py  test_eurlex_client.py  test_evidence_card.py  test_exa_client.py  test_feedback_logger.py  test_forschungsstand.py  test_integration_review.py  test_llm_client.py  test_openalex_client.py  test_paper_ranker.py  test_provenance.py  test_quellen_checker.py  test_query_generator.py  test_ranking_judge.py  test_reference_extractor.py  test_review_loop.py  test_reviewer.py  test_robustness.py  test_rubric_loader.py  test_screener.py  test_semantic_scholar.py  test_state.py  test_topic_decomposer.py  test_venue_profiles.py  test_voice_profiles.py
(+150 files in other folders)
