[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-toolkit"
version = "0.1.0"
description = "Modular AI toolkit for academic research — from literature search to polished draft."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
research-toolkit = "cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
]
nlp = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]
parsing = [
    "marker-pdf>=0.3",
    "pymupdf>=1.24",
]
typesetting = [
    "pandoc>=2.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
